--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.2",
-    "antd": "^5.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ant-design/icons": "5.1.3",
+    "antd": "5.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-use": "17.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "prettier": "^2.8.8",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
+    "@vitejs/plugin-react": "4.0.0",
+    "eslint": "8.41.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.1",
+    "prettier": "2.8.8",
+    "typescript": "5.0.4",
+    "vite": "4.3.9"
   }
 }
